Closed Bug 629577 Opened 14 years ago Closed 14 years ago

non-libxul builds broken by changes to History, unresolved symbol nsContentUtils::sXPConnect

Categories

(Toolkit :: Places, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b11

People

(Reporter: birtles, Assigned: ehsan.akhgari)

References

Details

(Keywords: dogfood, regression)

Attachments

(1 file, 2 obsolete files)

Changeset http://hg.mozilla.org/mozilla-central/rev/c03b00587c5d from bug 606966 appears to have broken non-libxul builds, reintroducing bug 627474. Specifically I'm seeing: History.obj : error LNK2001: unresolved external symbol "private: static class nsIXPConnect * nsContentUtils::sXPConnect" (?sXPConnect@nsContentUtils@@0PAVnsIXPConnect@@A) places.dll : fatal error LNK1120: 1 unresolved externals c:\moz\src\config\rules.mk:955:0: command 'c:/mozilla-build/python/python.exe c:/moz/src/build/pymake/pymake/../make.py -C src libs' failed, return code 2 c:\moz\src\config\rules.mk:888:0: command 'c:/mozilla-build/python/python.exe c:/moz/src/build/pymake/pymake/../make.py -C places libs' failed, return code 2 c:\moz\src\config\rules.mk:888:0: command 'c:/mozilla-build/python/python.exe c:/moz/src/build/pymake/pymake/../make.py -C components libs' failed, return code 2 c:\moz\src\config\rules.mk:785:0: command 'c:/mozilla-build/python/python.exe c:/moz/src/build/pymake/pymake/../make.py -C toolkit libs' failed, return code 2 c:\moz\src\config\rules.mk:796:0: command 'c:/mozilla-build/python/python.exe c:/moz/src/build/pymake/pymake/../make.py libs_tier_platform' failed, return code 2 c:\moz\src\config\rules.mk:746:0: command 'c:/mozilla-build/python/python.exe c:/moz/src/build/pymake/pymake/../make.py tier_platform' failed, return code 2 c:\moz\src\client.mk:345:0: command 'c:/mozilla-build/python/python.exe c:/moz/src/build/pymake/pymake/../make.py -C ../obj-debug' failed, return code 2
Blocks: 606966
Keywords: dogfood, regression
Attached patch Patch (v1) (obsolete) — Splinter Review
Let's see who reviews this sooner!
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #507782 - Flags: review?(sdwilsh)
Attachment #507782 - Flags: review?(mak77)
You need to add -I$(topsrcdir)/js/src/xpconnect/src to Makefile.in.
OS: Windows XP → All
Hardware: x86 → All
Attached patch Patch (v2) (obsolete) — Splinter Review
The first patch was actually wrong, even with the Makefile.in changes which were not included because of a missing qref. This one is the right approach, I think.
Attachment #507782 - Attachment is obsolete: true
Attachment #507803 - Flags: review?(bzbarsky)
Attachment #507782 - Flags: review?(sdwilsh)
Attachment #507782 - Flags: review?(mak77)
nit: + nsresult rv; + nsCOMPtr<nsIXPConnect> xpc(do_GetService(kXPConnectCID, &rv)); + NS_ENSURE_SUCCESS(rv, nsnull); could you do (pseudocode) nsCOMPtr xpc = do_getService... NS_ENSURE_TRUE(xpc, nsnull) nsresult rv xpc->GetWrapped... it's a more common style in our code.
Attached patch Patch (v3)Splinter Review
Addressed the nits.
Attachment #507803 - Attachment is obsolete: true
Attachment #507878 - Flags: review?(mak77)
Attachment #507803 - Flags: review?(bzbarsky)
Comment on attachment 507878 [details] [diff] [review] Patch (v3) per discussion on IRC, r+ with a follow-up to cache xpconnect in Services.h
Attachment #507878 - Flags: review?(mak77) → review+
Attachment #507878 - Flags: approval2.0+
Followup filed as bug 629697.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: