Bug 629577 - non-libxul builds broken by changes to History, unresolved symbol nsContentUtils::sXPConnect; r=mak a=sdwilsh

--HG--
extra : rebase_source : 8cf1b8decd13a8d46c46c81c3a3fd8ee5e8597d9